# claude_dashboard

./: .gitignore  README.md  pyproject.toml
devdash/: actions.py  app.py  boarddoc.py  config.py  hub.py  models.py  snapshot.py
devdash/collectors/: agents.py  gitrepos.py  quota.py  sessions.py  tmuxmap.py
docs/superpowers/specs/: 2026-06-11-dev-dash-design.md  2026-06-11-hub-design.md
skill/: SKILL.md  launch.sh
skill-hub/: SKILL.md
tests/: test_actions_board.py  test_app.py  test_collectors.py  test_hub.py  test_sessions.py
